<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fde300WPage">


    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/mainToolBar"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/toolbar"
        app:navigationIcon="@drawable/ic_hamburger" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:scaleX="0.6"
            android:scaleY="0.6"
            android:src="@drawable/logo"

            />
    </com.google.android.material.appbar.MaterialToolbar>
    <ImageView
        android:id="@+id/imageView_fde300w"
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:src="@drawable/fde300w"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </ImageView>

    <TextView
        android:id="@+id/textView_fde300w"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="FDE-300W"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textColor="#444444"
        app:layout_constraintStart_toStartOf="@+id/imageView_fde300w"
        app:layout_constraintTop_toBottomOf="@+id/imageView_fde300w">
    </TextView>

    <TextView
        android:id="@+id/description_fde300w"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fechadura_digital_de_embutir"
        android:textColor="#444444"
        android:textSize="12sp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@+id/textView_fde300w"
        app:layout_constraintTop_toBottomOf="@+id/textView_fde300w">
    </TextView>

    <LinearLayout
        android:id="@+id/layoutFeatures"
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/description_fde300w">

        <LinearLayout
            android:layout_weight="0.5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:padding="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/resis_agua">
                </ImageView>

                <TextView
                    android:padding="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/resistente_agua"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:textColor="#444444"
                    android:fontFamily="@font/roboto">
                </TextView>
            </LinearLayout>

            <LinearLayout
                android:padding="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/access_wifi">
                </ImageView>
                <TextView
                    android:padding="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/acesso_remoto_via_wi_fi"
                    android:layout_gravity="center"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textColor="#444444"
                    android:fontFamily="@font/roboto">
                </TextView>
            </LinearLayout>

            <LinearLayout
                android:padding="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/teclado_num">
                </ImageView>
                <TextView
                    android:padding="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/teclado_n_merico"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textColor="#444444"
                    android:fontFamily="@font/roboto">
                </TextView>
            </LinearLayout>



        </LinearLayout>

        <LinearLayout
            android:layout_weight="0.5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:padding="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/alexa">
                </ImageView>
                <TextView
                    android:padding="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/compat_vel_com_alexa"
                    android:layout_gravity="center"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textColor="#444444"
                    android:fontFamily="@font/roboto">
                </TextView>
            </LinearLayout>

            <LinearLayout
                android:padding="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/leitor_bio">
                </ImageView>
                <TextView
                    android:padding="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/leitor_bio"
                    android:layout_gravity="center"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textColor="#444444"
                    android:fontFamily="@font/roboto">
                </TextView>
            </LinearLayout>

            <LinearLayout
                android:padding="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/access_cartao">
                </ImageView>
                <TextView
                    android:padding="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/acesso_por_cart"
                    android:layout_gravity="center"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textColor="#444444"
                    android:fontFamily="@font/roboto">
                </TextView>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnComprar"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:backgroundTint="#000000"
        android:text="@string/btn_comprar"
        app:cornerRadius="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutFeatures"
        app:layout_constraintVertical_bias="0.09"
        app:rippleColor="#191919" />


</androidx.constraintlayout.widget.ConstraintLayout>

